[package]
name = "orml-xcm-mock-message-queue"
description = "XCM Mock Message Qeueu for XCM Simulator tests"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm-mock-message-queue"
license = "Apache-2.0"
version = "0.10.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde", "decode"] }

frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

xcm = { version = "8.0.0", package = "staging-xcm", default-features = false }
polkadot-parachain-primitives = { version = "7.0.0", default-features = false }
cumulus-primitives-core = { version = "0.8.0", default-features = false }

[dev-dependencies]

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"codec/std",
	"polkadot-parachain-primitives/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
]
